criando as funções de cores

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main></main>
+    <main>
+        <h1 id="title">Adivinhe a Cor</h1>
+        <div>
+            <p id="rgb-color">(168, 34, 1)</p>
+            <p id="answer">Escolha uma cor</p>
+        </div>
+        <div id="colors">
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
