--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         <h1 id="title">Adivinhe a Cor</h1>
         <div>
             <p id="rgb-color">(168, 34, 1)</p>
-            <p id="answer">Escolha uma cor</p>
+            <p id="score">Seu Placar: 0</p>
         </div>
         <div id="colors">
         </div>
+        <p id="answer"><strong>Escolha uma cor</strong></p>
+        <button id="reset-game">Resetar Jogo/Cores</button>
     </main>
     <script src="script.js"></script>
 </body>
