--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <main>
-        <h1 id="title">Adivinhe a Cor</h1>
-        <div>
+        <h1 id="title">Adivinhe a Cor!</h1>
+        <div id="text">
             <p id="rgb-color">(168, 34, 1)</p>
             <p id="score">Seu Placar: 0</p>
         </div>
         <div id="colors">
         </div>
         <p id="answer"><strong>Escolha uma cor</strong></p>
+        <div>
+        <button id="increase">Aumentar Dificuldade</button>
+        <button id="remove">Diminuir Dificuldade</button>
         <button id="reset-game">Resetar Jogo/Cores</button>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
